# graduation_final

./: CMakeLists.txt  README.md  doglib  models  resnet.py
conv_sample/: CMakeLists.txt  conv_sample.cpp
fakenet/: fakenet.py
mnistCUDNN/: mnistCUDNN
resnet/: CMakeLists.txt  activation.h  bn.h  cg.cu  cg.h  common.h  computational_graph.h  conv.h  cross_entropy.cu  cross_entropy.h  cu_extra.cu  cu_extra.h  data_provider.cu  defs.h  descriptor.h  doglib  driver.cpp  driver.cu  engine.h  fc.h  feature_manager.cu  functor.h  global.h  gradient_manager.cu  memory_manager.cu  memory_manager.h  optimizer.h  pass.cu  pool.h  pooling.h  resnet.cpp  resnet.cu  resnet.h  stdafx.cu  stdafx.h  tensor.h  visitors.cu  visitors.h  wrapper.h
resnet/components/: activation.h  bn.h  conv.h  cross_entropy.cu  cross_entropy.h  cu_extra.h  descriptor.h  fc.h  functor.h  pooling.h
resnet/helper/: common.h  defs.h  global.h  wrapper.h
