# add_executable(resnet resnet.cu)
find_package(OpenMP REQUIRED)
add_executable(driver driver.cu)
file(GLOB headers *.h)
add_library(cross_entropy components/cross_entropy.cu visitors.cu pass.cu gradient_manager.cu feature_manager.cu)
add_library(sa data_provider.cu)
# target_link_libraries(resnet cublas cudnn)
# target_link_libraries(resnet cross_entropy)

target_link_libraries(driver cross_entropy sa)
target_link_libraries(driver cublas cudnn pthread OpenMP::OpenMP_CXX)
